# book-strands

./: README.md  TODO.md  pyproject.toml  shell.nix
.github/workflows/: publish.yml
src/book_strands/: agent.py  cli.py  constants.py  utils.py
src/book_strands/tools/: __init__.py  download_ebook.py  filesystem.py  metadata_agent.py  read_ebook_metadata.py  write_ebook_metadata.py
tests/: test_agent.py  test_cli_config.py  test_filesystem.py  test_read_ebook_metadata.py  test_utils.py  test_write_ebook_metadata.py
tests/test_data/correct-metadata/: bobiverse-1.epub  gods-of-risk.epub
tests/test_data/missing-metadata/: bobiverse-1.epub  gods-of-risk.epub
