[project]
name = "book-strands"
version = "0.1.0"
description = "A powerful CLI tool for managing e-book metadata and organizing your digital library."
readme = "README.md"
authors = [
    { name = "Justin Dray", email = "justin@dray.be"}
]
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.19",
    "strands-agents>=0.1.2",
    "strands-agents-tools>=0.1.1",
    "click>=8.0.0",
]

[project.scripts]
book-strands = "book_strands.cli:cli"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "strands-agents-builder>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
